# rnote-thumbnailer

./: .gitignore  AUTHORS  CHANGELOG  Cargo.toml  ChangeLog  NEWS  README  README.md  autogen.sh  configure.ac  gnome-raw-thumbnailer.spec  meson.build  meson_options.txt  raw-thumbnailer.spec  rnote.spec
.github/workflows/: release.yml
build-aux/: cargo-vendor.sh
data/: com.github.flxzt.rnote.xml  meson.build  mime-type-list.txt  raw-thumbnailer.xml  raw.thumbnailer  rnote.thumbnailer
po/: POTFILES.in  raw-thumbnailer.pot
src/: Makefile.am  main.rs  raw-thumbnailer.c
