[package]
name = "raw-thumbnailer"
version = "47.0.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4.5", features = [ "derive" ] }
gettext-rs = { version = "0.7.0", features = [ "gettext-system" ] }
image = { version = "0.25.1", features = [ "png", "jpeg" ], default-features = false }
libopenraw = { version = "0.4.0-alpha.7", default-features = false, features = [ "probe" ] }
